# Rust_vs_JavaScript

./: .env  Cargo.toml  NodeVsRustSingleThread.txt  README.md  Test.rs  index.js  multiThreadTest.json  package-lock.json  package.json  result.json
Node/: createAndInsertData.js  index.js  multiThread_index.js  package-lock.json  package.json
Rust/: .env  Cargo.toml  res.json
Rust/src/: main.rs
src/: main.rs
